force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__Alignment__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Alignment__c</fullName>
        <description>Determines how the column label and values are aligned.</description>
        <inlineHelpText>Determines how the column label and values are aligned.</inlineHelpText>
        <label>Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                    <default>true</default>
                    <label>Left</label>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>