force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__BottomMargin__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BottomMargin__c</fullName>
        <defaultValue>3</defaultValue>
        <description>This is the bottom margin in pixels.</description>
        <inlineHelpText>The amount of space in pixels between bottom border and content.</inlineHelpText>
        <label>Bottom Margin (px)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>