force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__ColumnHeadingField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ColumnHeadingField__c</fullName>
        <description>The API name of the field on quote object that sources value for this column&apos;s heading.</description>
        <inlineHelpText>The field that sources the dynamic heading for this column.</inlineHelpText>
        <label>Column Heading Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>