force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__ConditionalPrintField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConditionalPrintField__c</fullName>
        <description>Field on quote object that controls whether this column prints on generated PDF document.</description>
        <inlineHelpText>Field on quote object that controls whether this column prints on generated PDF document.</inlineHelpText>
        <label>Conditional Print Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Line Items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>