force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__DisplayOrder__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <description>Order in which the column hosting this field is displayed.</description>
        <inlineHelpText>Order in which the column hosting this field is displayed.</inlineHelpText>
        <label>Display Order</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>