force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__FieldName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FieldName__c</fullName>
        <description>Field name relative to the Quote Line object.</description>
        <inlineHelpText>API name for the field on the Quote Line object you want displayed in this column.</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>