force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__FontSize__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FontSize__c</fullName>
        <description>Size of font (in points) applied to this column.</description>
        <inlineHelpText>Specify font size (in points) for text in this column. Leaving black inherits from the template.</inlineHelpText>
        <label>Font Size (pt)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </CustomField>