force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__FontWeight__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FontWeight__c</fullName>
        <description>Weight of font applied to this column.</description>
        <inlineHelpText>Specify font weight for text in this column. Leaving blank defaults to &quot;Normal&quot;.</inlineHelpText>
        <label>Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Bold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>