force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__HeadingTextColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HeadingTextColor__c</fullName>
        <description>Color (in Hex) applied to text in the heading of this column.</description>
        <inlineHelpText>Specify color (in Hex) for text in the heading of this column. Leaving blank inherits from text color for this column.</inlineHelpText>
        <label>Heading Text Color</label>
        <length>6</length>
        <type>Text</type>
    </CustomField>