force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__HideOnComponents__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HideOnComponents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides value in this column if line item is a Product Option.</description>
        <inlineHelpText>Hides value in this column if line item is a Product Option.</inlineHelpText>
        <label>Hide On Product Options</label>
        <type>Checkbox</type>
    </CustomField>