force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__LeftMargin__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LeftMargin__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Left margin in pixels.</description>
        <inlineHelpText>Amount of space in pixels between left border and content.</inlineHelpText>
        <label>Left Margin (px)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>