force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__RightMargin__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RightMargin__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Right margin in pixels.</description>
        <inlineHelpText>Amount of space in pixels between right border and content.</inlineHelpText>
        <label>Right Margin (px)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>