force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__RollUp__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RollUp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this field should be rolled up into master line. Only applicable if Roll-Up Field is specified on the template.</description>
        <inlineHelpText>Indicates whether this field should be rolled up into master line. Only applicable if Roll-Up Field is specified on the template.</inlineHelpText>
        <label>Roll Up</label>
        <type>Checkbox</type>
    </CustomField>