force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__Section__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Section__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Section to which this line column applies. No section means the column applies to all sections.</description>
        <inlineHelpText>Section to which this line column applies. No section means the column applies to all sections.</inlineHelpText>
        <label>Section</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__Template__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__TemplateSection__c.SBQQ__Template__c</valueField>
            </filterItems>
            <filterItems>
                <field>SBQQ__TemplateSection__c.SBQQ__Content__r.SBQQ__Type__c</field>
                <operation>equals</operation>
                <value>Line Items</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__TemplateSection__c</referenceTo>
        <relationshipLabel>Line Columns</relationshipLabel>
        <relationshipName>LineColumns</relationshipName>
        <type>Lookup</type>
    </CustomField>