force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__SeparateLine__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SeparateLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether this field is printed on its own separate line.</description>
        <inlineHelpText>Select the checkbox in order for this field to be printed on its own line. Use for long text fields such as product description.</inlineHelpText>
        <label>Separate Line</label>
        <type>Checkbox</type>
    </CustomField>