force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__SubGroupSummaryLabel__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubGroupSummaryLabel__c</fullName>
        <description>Summary label for sub Group level.</description>
        <inlineHelpText>Summary label for sub Group level.</inlineHelpText>
        <label>Sub Group Summary Label</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>