force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__SummaryFontWeight__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SummaryFontWeight__c</fullName>
        <description>Weight of font applied to text in the summary row.</description>
        <inlineHelpText>Specify font weight for text in the summary row for this column Leaving blank defaults to font weight for the column overall.</inlineHelpText>
        <label>Summary Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Bold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>