force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__SummaryFunction__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SummaryFunction__c</fullName>
        <description>Function used to summarize values in this column.</description>
        <inlineHelpText>Function used to summarize values in this column.</inlineHelpText>
        <label>Summary Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>