force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__SummaryLabel__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SummaryLabel__c</fullName>
        <description>Label output for this column in the summary row.</description>
        <inlineHelpText>Label output for this column in the summary row.</inlineHelpText>
        <label>Summary Label</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>