force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__SummaryLevel__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SummaryLevel__c</fullName>
        <description>Level this column should be summarized at.</description>
        <inlineHelpText>Set the level on which this column should be summarized.</inlineHelpText>
        <label>Summary Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Sub Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>