force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__SummaryShadingColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SummaryShadingColor__c</fullName>
        <description>Color (in Hex) applied to cell background in the summary row for this column.</description>
        <inlineHelpText>Specify color (in Hex) for cell background in the summary row for this column. Leaving blank inherits shading color for the template.</inlineHelpText>
        <label>Summary Shading Color</label>
        <length>6</length>
        <type>Text</type>
    </CustomField>