force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__SummaryTextColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SummaryTextColor__c</fullName>
        <description>Color (in Hex) applied to text in the summary row for this column.</description>
        <inlineHelpText>Specify color (in Hex) for text in the summary row for this column. Leaving blank inherits from text color for this column.</inlineHelpText>
        <label>Summary Text Color</label>
        <length>6</length>
        <type>Text</type>
    </CustomField>