force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__Template__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Template__c</fullName>
        <description>Template on which this field is to be displayed.</description>
        <inlineHelpText>Template on which this field is to be displayed.</inlineHelpText>
        <label>Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Line Columns</relationshipLabel>
        <relationshipName>LineColumns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>