force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__TextColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TextColor__c</fullName>
        <description>Color (in Hex) applied to text in this column.</description>
        <inlineHelpText>Specify color (in Hex) for text in this column. Leaving blank inherits from the template.</inlineHelpText>
        <label>Text Color</label>
        <length>6</length>
        <type>Text</type>
    </CustomField>