force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__TopMargin__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TopMargin__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Top margin in pixels.</description>
        <inlineHelpText>Amount of space in pixels between top border and content.</inlineHelpText>
        <label>Top Margin (px)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>