force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__Width__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Width__c</fullName>
        <description>Width of the column taken up by this field.</description>
        <inlineHelpText>Width (percentage) of the column taken up by this field.</inlineHelpText>
        <label>Width</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>