force-app/main/default/objects/SBQQ__LineColumn__c/fields/SBQQ__WidthDiscardedWhenHidden__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__WidthDiscardedWhenHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether width of this column is re-allocated to another column or discarded when the column is dynamically hidden.</description>
        <inlineHelpText>Select the checkbox for conditionally displayed column to replace another column(s). Leaving this box unselected will re-allocate width of this column when it&apos;s hidden to another column therefore keeping table width unchanged.</inlineHelpText>
        <label>Discard Width When Hidden</label>
        <type>Checkbox</type>
    </CustomField>